k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boundarypass
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: boundarypass
  template:
    metadata:
      labels:
        app: boundarypass
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          minDomains: 2
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: boundarypass
      containers:
        - name: boundarypass
          image: kuragayalaakhil/boundarypass:b2d1e58c913983b421706c9189b1dd8b4c6db9e5
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
