k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boundarypass
  labels:
    app: boundarypass
spec:
  type: ClusterIP
  selector:
    app: boundarypass
  ports:
    - name: http
      port: 80
      targetPort: 8000
